  CHANGES IN BayesFactor VERSION 0.9.8

CHANGES
  *  Fixed bugs in model enumeration code

  CHANGES IN BayesFactor VERSION 0.9.7

CHANGES
  *  Fixed a bug causing posterior sampling of t test to fail when data was defined as integer type
  *  Fixed a bug causing a two-way interaction to sometimes not be included in 3-way ANOVA analyses
  *  Reworked model enumeration code to be more efficient and faster; 4-way analyses no longer take a long time to build
  *  Moved 'methods' to Depends so that Rscript will work without the user having to explicitly load the package methods

  CHANGES IN BayesFactor VERSION 0.9.6

CHANGES
  *  Fixed a bug causing Bayes factors to evaluate to NA when matrix inversion fails (very rare)
  *  Fixed a bug causing computation to fail if importance sampling fails in nWayAOV. Uses method="simple" as a fallback.
  *  Fixed a bug where quadrature failed for large F values in unbalanced one-way ANOVA designs
  *  Data frame for linear model analyses now get modified: character columns are converted to factors, and factors are re-factor()ed to get rid of levels with no observations
  * Increased prior scales in one-sample t test by a factor of sqrt(2), in order to be consistent with the two-sample t test for the same effect size and effective sample size
  * Added vignette with prior checks to show consistency across methods
  * Added vignette with comparisons of BayesFactor results to arm/lme4

  CHANGES IN BayesFactor VERSION 0.9.5

CHANGES
  *  Minor bug fixes
  *  Changed back to new R 3.0 vignette building (and moved files to vignettes directory)
  *  Restricted to R >= 3.0.0

  CHANGES IN BayesFactor VERSION 0.9.4

CHANGES
  *  Fixed bug in sampling of posteriors in linear models
  *  Fixed bug computing the Bayes factor of unbalanced one-way ANOVA with two levels - caused function to fail
  *  Fixed occasional problem where optimization for the importance sampler would fail, giving a numerically singular matrix