@@ -2,15 +2,34 @@ Package: BayesFactor
 Type: Package
 Title: Computation of Bayes factors for common designs
 Version: 0.9.8
-Date: 2014-3-22
+Date: 2014-7-01
 Author: Richard D. Morey, Jeffrey N. Rouder
 Maintainer: Richard D. Morey <richarddmorey@gmail.com>
-Description: The BayesFactor package is a suite of functions for computing various Bayes factors for simple designs, including the one- and two-sample designs, one-way designs, general ANOVA designs, and linear regression.
+Description: The BayesFactor package is a suite of functions for computing
+    various Bayes factors for simple designs, including the one- and two-sample
+    designs, one-way designs, general ANOVA designs, and linear regression.
 License: GPL-2
 VignetteBuilder: knitr
-Depends:  R (>= 3.0.0), coda, methods
-Imports:  pbapply, mvtnorm, stringr, utils, graphics
-Suggests: doMC, testthat, knitr, markdown, arm, lme4, xtable, languageR
-URL:  http://bayesfactorpcl.r-forge.r-project.org/
-BugReports:  https://github.com/richarddmorey/BayesFactor/issues
+Depends:
+    R (>= 3.0.0),
+    coda,
+    methods
+Imports:
+    pbapply,
+    mvtnorm,
+    stringr,
+    utils,
+    graphics
+Suggests:
+    doMC,
+    testthat,
+    knitr,
+    markdown,
+    arm,
+    lme4,
+    xtable,
+    languageR,
+    ggplot2
+URL: http://bayesfactorpcl.r-forge.r-project.org/
+BugReports: https://github.com/richarddmorey/BayesFactor/issues
 LazyLoad: yes
